project(libxcb-composite)

set(LIBXCB_COMPOSITE_BASE_VERSION 1.11.1)
set(LIBXCB_COMPOSITE_VERSION ${LIBXCB_COMPOSITE_BASE_VERSION}.orig)
set(LIBXCB_COMPOSITE_REQUIRED_VERSION ${LIBXCB_COMPOSITE_BASE_VERSION})
set(LIBXCB_COMPOSITE_NAME ${PROJECT_NAME})
set(LIBXCB_COMPOSITE_BASE ${LIBXCB_COMPOSITE_NAME}-${LIBXCB_COMPOSITE_VERSION})

find_package(LibXcbComposite QUIET)

if (NOT LIBXCB_COMPOSITE_FOUND)
    set(LIBXCB_COMPOSITE_EXTENSION tar.gz)
    set(LIBXCB_COMPOSITE_FULLNAME ${LIBXCB_COMPOSITE_BASE}.${LIBXCB_COMPOSITE_EXTENSION})
    set(LIBXCB_COMPOSITE_SITE http://archive.ubuntu.com/ubuntu/pool/main/libx/libxcb)
    set(LIBXCB_COMPOSITE_STAMP_DIR ${PACKAGE_STAMP_DIR}/${LIBXCB_COMPOSITE_BASE})
    setup_package_automake(
        ${PACKAGE_DOWNLOAD_DIR}
        ${PACKAGE_BUILD_DIR}
        ${PACKAGE_STAGING_DIR}
        ${LIBXCB_COMPOSITE_STAMP_DIR}
        ${CMAKE_CURRENT_SOURCE_DIR}
        ${LIBXCB_COMPOSITE_SITE}
        ${LIBXCB_COMPOSITE_FULLNAME}
        ${LIBXCB_COMPOSITE_BASE}
        ${LIBXCB_COMPOSITE_BASE}
        ""
        ""
        "./configure --prefix=${CMAKE_INSTALL_PREFIX}")
else()
    add_custom_target(${LIBXCB_COMPOSITE_BASE})
endif()
